@@ -1,3 +1,8 @@
+2013-04-29  Christian Bruel  <christian.bruel@st.com>
+
+	PR target/57108
+	* sh.md (tstsi_t_zero_extract_eq): Set mode for operand 0.
+
 2013-04-29  Richard Biener  <rguenther@suse.de>
 
 	PR middle-end/57089
